--- a/template.yml
+++ b/template.yml
@@ -4,53 +4,56 @@ Transform: AWS::Serverless-2016-10-31
 Metadata:
   AWS::ServerlessRepo::Application:
     Name: json-lambda-logs-to-kinesis-firehose
-    Description: This serverless application... TODO
+    Description: This serverless application forwards JSON-formatted log events for an AWS Lambda function to a Kinesis Data Firehose Delivery Stream
     Author: James Hood
-    # SPDX License Id, e.g., MIT, MIT-0, Apache-2.0. See https://spdx.org/licenses for more details
-    SpdxLicenseId: TODO
+    SpdxLicenseId: MIT
     # paths are relative to .aws-sam/build directory
     LicenseUrl: ../../LICENSE
     ReadmeUrl: ../../README.md
-    Labels: [serverless]
+    Labels: [lambda, logs, json, kinesis-firehose]
     HomePageUrl: https://github.com/jlhood/json-lambda-logs-to-kinesis-firehose
-    # Update the semantic version and run sam publish to publish a new version of your app
     SemanticVersion: 0.0.1
-    # best practice is to use git tags for each release and link to the version tag as your source code URL
     SourceCodeUrl: https://github.com/jlhood/json-lambda-logs-to-kinesis-firehose/tree/0.0.1
 
 Parameters:
+  LambdaFunctionName:
+    Type: String
+    Description: Name (not ARN) of the Lambda function whose JSON-formatted logs should be sent to the given Kinesis Data Firehose Delivery Stream.
+  KinesisFirehoseDeliveryStream:
+    Type: String
+    Description: Name (not ARN) of the Kinesis Data Firehose Delivery Stream that JSON-formatted log events should be written to.
   LogLevel:
     Type: String
     Description: Log level for Lambda function logging, e.g., ERROR, INFO, DEBUG, etc
     Default: INFO
 
 Resources:
-  MyFunction:
+  ForwardJsonLogs:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: src/
-      Handler: myfunction.handler
+      Handler: forwardjsonlogs.handler
       Runtime: python3.7
       Tracing: Active
-      Timeout: 60
+      Timeout: 5
       Environment:
         Variables:
           LOG_LEVEL: !Ref LogLevel
-          TABLE_NAME: !Ref MyTable
-
-  MyTable:
-    Type: AWS::Serverless::SimpleTable
+          DELIVERY_STREAM_NAME: !Ref KinesisFirehoseDeliveryStream
+      Policies:
+        - FirehoseWritePolicy:
+            DeliveryStreamName: !Ref KinesisFirehoseDeliveryStream
+      Events:
+        Logs:
+          Type: CloudWatchLogs
+          Properties:
+            LogGroupName: !Sub /aws/lambda/${LambdaFunctionName}
+            FilterPattern: ''
 
 Outputs:
-  MyFunctionName:
-    Description: "Lambda Function Name"
-    Value: !Ref MyFunction
-  MyFunctionArn:
-    Description: "Lambda Function ARN"
-    Value: !GetAtt MyFunction.Arn
-  MyTableName:
-    Description: "Table Name"
-    Value: !Ref MyTable
-  MyTableArn:
-    Description: "Table ARN"
-    Value: !GetAtt MyTable.Arn
+  ForwardJsonLogsFunctionName:
+    Description: "Log forwarding Lambda function name"
+    Value: !Ref ForwardJsonLogs
+  ForwardJsonLogsFunctionArn:
+    Description: "Log forwarding Lambda function ARN"
+    Value: !GetAtt ForwardJsonLogs.Arn
